--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -4,4 +4,5 @@
 @import './checkout.scss';
 @import './navigation-menu.scss';
 @import './modals.scss';
-@import './accordion.scss'
+@import './accordion.scss';
+@import './color-palette.scss';
