--- a/src/scss/sections/product-preview.scss
+++ b/src/scss/sections/product-preview.scss
@@ -31,6 +31,7 @@
     .order-list {
         .item {
             display: flex;
+            margin-bottom: 12px;
     
             .item-title{
                 margin-left: 8px;
