--- a/src/scss/components/card-text.scss
+++ b/src/scss/components/card-text.scss
@@ -12,7 +12,7 @@
     flex-basis: 48.5%;
     border: 1px solid $colorGrey;
     transition: all ease-in-out .3s;
-    cursor: pointer;
+    // cursor: pointer;
 
     .label {
         color: #000;
