--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -22,11 +22,6 @@
         &:hover {
             color: #fff;
         }
-
-        &:hover::before {
-            width: 100%;
-            transition: width .4s cubic-bezier(0.39, 0.575, 0.565, 1);
-        }
     }
 
     .btn-next {
@@ -36,12 +31,13 @@
         color: #000;
         display: block;
         margin-left: auto;
-        cursor: not-allowed;
+        pointer-events: none;
         z-index: 2;
 
         &.active {
             color: #fff;
             cursor: pointer;
+            pointer-events: unset;
         }
 
         &.active::before {
@@ -50,24 +46,12 @@
         }
         
         
-        .active.btn-next::before {
-            width: 100%;
-        }
+        
     }
 }
 
-.btn-next::before,
-.btn-prev::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    transition: width 0.4s cubic-bezier(0.39, 0.575, 0.565, 1);
-    z-index: -1;
-    background-color: #181818;
-}
+
+
 
 @media screen and(min-width: 1441px) {
     .footer {
