--- a/src/scss/components/color-palette.scss
+++ b/src/scss/components/color-palette.scss
@@ -1,9 +1,11 @@
 .base__color-palette {
     margin-top: 40px;
     margin-bottom: 40px;
+    visibility: hidden;
+    overflow:hidden;
+    height: auto;
     display: none;
-    height: 0;
-
+    
     .palette__title {
         margin-bottom: 3px;
     }
@@ -16,8 +18,10 @@
     }
 
     // &.active {
-    //     display: block;
-    //     height: auto;
+    //     position: unset;
+    //     visibility: visible;
+    //     transition: .6s;
+    //     height: unset;
     // }
 }
 
@@ -26,6 +30,7 @@
     width: 28px;
     height: 28px;
     border: none;
+    // opacity: 0;
     background-color: transparent;
     border-radius: 50%;
     box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.2);
