--- a/src/scss/sections/choose--base.scss
+++ b/src/scss/sections/choose--base.scss
@@ -28,7 +28,7 @@
     margin-top: 20px;
     max-width: 700px;
     width: 100%;
-    height: 19px;
+    // height: 19px;
     font-size: 14px;
     line-height: 19px;
     color: #231D18;
@@ -58,5 +58,5 @@
     line-height: 11px;
     text-decoration-line: underline;
     color: #3B4857;
-    cursor: pointer;
+    // cursor: pointer;
 }
