--- a/src/scss/sections/choose--details.scss
+++ b/src/scss/sections/choose--details.scss
@@ -26,7 +26,7 @@
         margin-bottom: 32px;
         transition: all ease-in-out .3s;
         overflow: hidden;
-        cursor: pointer;
+        // cursor: pointer;
 
         &:hover {
             .card__img img {
@@ -74,8 +74,7 @@
         height: 32px;
         background-color: #fff;
         border-radius: 50%;
-        z-index: 10;
-        
+        z-index: 2;
 
         svg {
             width: 20px;
