--- a/src/scss/sections/features.scss
+++ b/src/scss/sections/features.scss
@@ -10,6 +10,7 @@
 
     &.active {
         transition: all .8s ease-in-out;
+        z-index: 2;
     }
 
     .features__btn {
@@ -46,5 +47,17 @@
         .item__description {
             margin-top: 10px;
         }
+    }
+}
+
+#btn-features {
+    padding: 20px 40px;
+    height: 56px;
+    position: relative;
+
+    &:hover {
+        color: #fff;
+        background-color: transparent;
+        
     }
 }
