--- a/src/scss/framework/utils.scss
+++ b/src/scss/framework/utils.scss
@@ -86,8 +86,6 @@
     }
 }
 
-
-
 #overlay {
     position: absolute;
     top: 0;
@@ -119,6 +117,10 @@
 
 .ml-auto {
     margin-left: auto;
+}
+
+.h-100 {
+    height: 100%;
 }
 
 .ml-0 {
