--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -6,3 +6,6 @@
 @import './modals.scss';
 @import './accordion.scss';
 @import './color-palette.scss';
+@import './form.scss';
+@import './product-tips.scss';
+@import './select.scss';
