--- a/src/scss/framework/variables.scss
+++ b/src/scss/framework/variables.scss
@@ -1,7 +1,7 @@
 $colorBlack: #000000;
 $colorPrimary: #231D18;
 $colorSecondary: #3B4857;
-$colorBrownDarken: #A9886E;
+$colorBrownDarken: #8D6355;
 $colorBrownLighten: #F6EDE2;
 $colorGrey: #E0E6ED;
 $colorWhite: #ffffff;
