--- a/src/scss/components/color-palette.scss
+++ b/src/scss/components/color-palette.scss
@@ -1,10 +1,9 @@
 .base__color-palette {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    visibility: hidden;
     overflow:hidden;
-    height: auto;
-    display: none;
+    padding-left: 5px;
+    max-height: 0;
+    opacity: 0;
+    transition: all ease-in-out .6s;
     
     .palette__title {
         margin-bottom: 3px;
@@ -17,12 +16,20 @@
         padding-bottom: 4px;
     }
 
-    // &.active {
-    //     position: unset;
-    //     visibility: visible;
-    //     transition: .6s;
-    //     height: unset;
-    // }
+    &.active {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        transition: 0.7s;
+        max-height: 200px;
+        opacity: 1;
+
+        @media screen and(max-width: 768px) {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    }
+
+    
 }
 
 .btn-color {
