--- a/src/scss/components/modals.scss
+++ b/src/scss/components/modals.scss
@@ -35,9 +35,196 @@
         visibility: visible;
         padding: 40px 30px 30px;
         opacity: 1;
-        height: 220px;
+        height: auto;
         z-index: 10;
         transition: all ease-in-out .8s;
         transition-delay: .2s;
+
+        @media screen and(max-width: 768px) {
+            margin: 0 auto;
+            width: 90%;
+            left: 0 !important;
+            right: 0 !important;
+            border-radius: 5px;
+            transform: none;
+        }
+    }
+
+    
+}
+
+.modal--perfume {
+    position: absolute;
+    top: 0;
+    left: -1000px;
+    padding: 32px 0;
+    max-width: 746px;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    transition: all ease-in-out .8s;
+    z-index: 10;
+
+    .perfume__header {
+        margin: 0 auto 40px;
+        display: flex;
+        justify-content: space-between;
+        max-width: 324px;
+        width: 100%;
+
+        .btn-close {
+            margin-right: unset;
+        }
+
+        @media screen and(max-width: 768px){
+            margin-bottom: 20px;
+        }
+    }
+
+    .perfume__body {
+        padding-left: 40px;
+        max-width: 506px;
+        width: 100%;
+
+        @media screen and(max-width: 768px){
+            padding-right: 16px;
+            padding-bottom: 20px;
+            padding-left: 16px;
+            height: 110vh;
+        }
+    }
+
+    .perfume__title {
+        font-family: "Playfair display";
+        font-size: 20px;
+        line-height: 27px;
+    }
+
+    .perfume__img {
+        margin-bottom: 40px;
+
+        img {
+            width: 100%;
+            height: 400px;
+            background-size: cover;
+
+            @media screen and(max-width: 768px){
+                height: 275px;
+            }
+        }
+    }
+
+    &.active {
+        left: 0;
+        z-index: 4;
+    }
+
+    @media screen and(max-width: 768px){
+        // right: unset;
+        // left: -1000%;
+        padding: 20px 0 32px;
+    }
+}
+
+.component {
+    &:not(:last-of-type) {
+        margin-bottom: 20px;
+    }
+
+    .component__description {
+        display: flex;
+        align-items: center;
+
+        .component__title {
+            padding-left: 12px;
+        }
+    }
+
+    .component__price {
+        padding-left: 44px;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+    }
+}
+
+.btn-update {
+    display: block;
+    margin: 80px auto 0;
+    font-size: 16px;
+    line-height: 22px;  
+    font-weight: bold;
+    text-align: center;
+    color: #000;
+
+    @media screen and(max-width: 768px) {
+        margin-top: 55px;
+    }
+}
+
+.modal--contacts {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 20px;
+    width: 428px;
+    min-height: 0;
+    text-align: left;
+    background-color: #fff;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    opacity: 0;
+    transition: all ease-in-out .4s;
+
+    &.active {
+        max-height: 302px;
+        z-index: 5;
+        opacity: 1;
+    }
+
+    .modal__header {
+        margin-bottom: 32px;
+
+        .btn-close {
+            margin-right: unset;
+            margin-left: auto;
+        }
+    }
+
+    .modal__title {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    .modal-link {
+        display: block;
+        margin-bottom: 16px;
+    }
+
+    .work-hours__title {
+        margin-top: 28px;
+        margin-bottom: 16px;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+    }
+
+    .hours {
+        margin-bottom: 20px;
+    }
+
+    .call-back {
+        font-size: 16px;
+        line-height: 22px;
+        text-decoration: underline;
+    }
+
+    @media screen and(max-width: 768px) {
+        // display: none;
+        position: fixed;
+        width: 93%;
+        margin: 0 auto;
+
     }
 }
