--- a/src/scss/components/navigation-menu.scss
+++ b/src/scss/components/navigation-menu.scss
@@ -8,7 +8,8 @@
     padding-right: 30px;
     padding-bottom: 60px;
     padding-left: 200px;
-    width: 573px;
+    max-width: 573px;
+    width: 100%;
     height: 100vh;
     background-color: #fff;
     z-index: 2;
@@ -19,11 +20,15 @@
         left: 0;
         opacity: 1;
         transition: ease-in-out 0.9s;
-        z-index: 4;
+        z-index: 5;
     }
 
     .menu__header {
         display: flex;
+
+        @media screen and(max-width: 768px) {
+            visibility: hidden;
+        }
     }
 
     .menu__socials {
@@ -36,10 +41,21 @@
         .item-link {
             color: #000;
         }
+
+        @media screen and(max-width: 768px) {
+            display: none;
+        }
     }
 
     .menu__content {
         margin-top: 84px;
+
+        @media screen and(max-width: 768px) {
+            margin-top: 20px;
+            max-height: 464px;
+            overflow: hidden;
+            overflow-y: scroll;
+        }
     }
 
 
@@ -50,6 +66,13 @@
     .menu__footer {
         margin-top: auto;
         display: block;
+
+        @media screen and(max-width: 768px) {
+            position: fixed;
+            left: 16px;
+            right: 16px;
+            bottom: 20px;
+        }
     }
 
     .translations-list {
@@ -64,5 +87,15 @@
                 color: $colorBrownDarken;
             }
         }
+    }
+
+    .nav-btn {
+        margin-top: 32px;
+    }
+
+    @media screen and(max-width: 768px) {
+        left: -200%;
+        padding-right: 16px;
+        padding-left: 16px;
     }
 }
