--- a/src/scss/framework/base.scss
+++ b/src/scss/framework/base.scss
@@ -10,8 +10,37 @@ body, html {
 body {
     position: relative;
     font-family: 'Open Sans', sans-serif;
+
+    @media screen and(max-width: 768px) {
+        // overflow: hidden;
+    }
 }
 
 button {
-    // cursor: pointer;
+    font-family: 'Open sans', sans-serif;
+    cursor: pointer;
+}
+
+
+/* page transition animation */
+
+.loading-screen {
+    position: relative;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    background-color: #8d6355;
+    width: 100%;
+    height: 0%;
+}
+
+.load-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 10;
+    pointer-events: none;
 }
