--- a/src/scss/framework/containers.scss
+++ b/src/scss/framework/containers.scss
@@ -2,12 +2,22 @@
     margin: 0 auto;
     max-width: 1200px;
     width: 100%;
+
+    @media screen and(max-width: 768px) {
+        // padding-right: 16px;
+        // padding-left: 16px;
+    }
 }
 
 .container--narrow {
     margin: 0 auto;
     max-width: 800px;
     width: 100%;
+
+    @media screen and(max-width: 768px) {
+        padding-right: 16px;
+        padding-left: 16px;
+    }
 }
 
 .flex-container {
@@ -28,9 +38,10 @@
     justify-content: space-between;
     max-width: 1200px;
 
-    // @media screen and (min-width: 1441px) {
-    //     padding-left: 0;
-    // }
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        padding-left: 0;
+    }
 }
 
 @media (min-width: 1920px) {
