--- a/src/scss/framework/typography.scss
+++ b/src/scss/framework/typography.scss
@@ -2,23 +2,51 @@
 .h2,
 .h3,
 .h4,
-.h5,
-.h6 {
+.h5 {
     font-family: 'Playfair Display', serif;
 }
 
 .h1 {
     font-size: 60px;
     line-height: 150%;
+
+    @media screen and(max-width: 768px) {
+        font-size: 30px;
+    }
 }
 
 .h2 {
     font-size: 40px;
     line-height: 150%;
+
+    @media screen and(max-width: 768px) {
+        font-size: 20px;
+        text-align: left;
+    }
+}
+
+.h3 {
+    font-size: 24px;
+    line-height: 32px;
+
+    @media screen and(max-width: 768px) {
+        font-size: 20px;
+        line-height: 135%;
+    }
 }
 
 .h4 {
     font-size: 18px;
     line-height: 24px;
     font-weight: normal;
+
+    @media screen and (max-width: 768px) {
+        font-size: 16px;
+    }
+}
+
+.h6 {
+    font-size: 12px;
+    line-height: 16px;
+    color: $colorSecondary;
 }
