--- a/src/scss/framework/utils.scss
+++ b/src/scss/framework/utils.scss
@@ -2,25 +2,25 @@
     position: fixed;
     width: 30px;
     height: 30px;
-    border: 1px solid $colorBrownDarken;
+    border: 2px solid $colorBrownDarken;
     border-radius: 50%;
     top: 0;
     left: 0;
     pointer-events: none;
     transform: translate(-50%, -50%);
-    // transition: .15s;
+    transition: .15s;
     z-index: 1000;
     mix-blend-mode: difference;
 }
 
 #cursor--small {
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    background-color: $colorBrownLighten;
+    position: fixed;
+    width: 10px;
+    height: 10px;
+    background-color: $colorBrownDarken;
     border-radius: 50%;
-    top: 0;
-    left: 0;
+    top: -1px;
+    left: -1px;
     pointer-events: none;
     transform: translate(-50%, -50%);
     // transition: .3s;
@@ -28,13 +28,22 @@
     mix-blend-mode: difference;
 }
 
+@media screen and(max-width: 768px) {
+    #cursor,
+    #cursor--small {
+        display: none;
+    }
+}
+
+
+
 #cursor.expand {
     opacity: .5;
     width: 4px;
     height: 4px;
     top: 13px;
     left: 13px;
-    transition: .3s;
+    transition: .2s;
     // animation: cursorAnimSmall .5s;
 }
 
@@ -44,7 +53,7 @@
     height: 4px;
     top: 2px;
     left: 2px;
-    transition: .3s;
+    transition: .2s;
     // animation: cursorAnimSmall;
 }
 
@@ -87,7 +96,7 @@
 }
 
 #overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -96,8 +105,10 @@
     opacity: 0;
     transition: 0.4s;
     z-index: -4;
+    visibility: hidden;
 
     &.active {
+        visibility: visible;
         z-index: 3;
         filter: blur(10);
         opacity: 0.3;
@@ -123,6 +134,10 @@
     height: 100%;
 }
 
+.w-100 {
+    width: 100%;
+}
+
 .ml-0 {
     margin-left: 0;
 }
@@ -140,24 +155,51 @@
     width: 15px;
     position: absolute;
     right: -15px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 7px 2px rgba(0, 0, 0, 0.065);
-    // border-radius: 10px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: $colorBrownLighten;
-    // border-radius: 10px;
-  }
 
-b {
-    font-weight: bold;
+    @media screen and(max-width: 768px) {
+        display: none;
+    }
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 7px 2px rgba(0, 0, 0, 0.065);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: $colorBrownLighten;
 }
 
 
 
+b,
+.bold {
+    font-weight: bold;
+}
 
+.text-white {
+    color: #fff !important;
+}
+
+.text-dark {
+    color: #231D18;
+}
+
+.text-primary {
+    color: $colorBrownDarken;
+}
+
+.text-secondary {
+    color: $colorSecondary;
+
+    // @media screen and(max-width: 768px) {
+    //     font-size: 12px;
+    //     line-height: 150%;
+    // }
+}
+
+.red-star,
+.red {
+    color: #fc4b4e !important;
+}
