--- a/src/scss/pages/homePage.scss
+++ b/src/scss/pages/homePage.scss
@@ -3,16 +3,25 @@
     padding-top: 300px;
     height: 100vh;
     color: $colorWhite;
-    background-image: url('~images/backgrounds/home-background.jpg');
+    // background-image: url('~images/backgrounds/home-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
 
+    @media screen and(max-width: 768px){
+        padding-top: 190px;
+        padding-right: 16px;
+        padding-left: 16px;
+    }
 }
 
 .home__title {
     text-align: center;
     max-width: 720px;
+
+    @media screen and(max-width: 768px) {
+        text-align: left;
+    }
 }
 
 
@@ -24,10 +33,25 @@
     .item:not(:last-child) {
         margin-right: 50px;
     }
+
+    @media screen and(max-width: 768px) {
+        margin-top: 32px;
+        flex-direction: column;
+        align-self: baseline;
+
+        .item:not(:last-child) {
+            margin-right: 0px;
+            margin-bottom: 20px;
+        }
+    }
 }
 
 .home__btn {
     margin-top: 50px;
+
+    @media screen and(max-width: 768px) {
+        margin-top: 88px;
+    }
 }
 
 .text-link {
@@ -35,4 +59,8 @@
     font-weight: 600;
     color: $colorWhite;
     font-size: 16px;
+
+    @media screen and(max-width: 768px) {
+        margin-top: 30px;
+    }
 }
