--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,3 +1,5 @@
 @import './homePage.scss';
 @import './stepPage.scss';
 @import './cardPage.scss';
+@import './checkoutPage.scss';
+@import './thanks.scss';
