--- a/src/scss/pages/stepPage.scss
+++ b/src/scss/pages/stepPage.scss
@@ -6,4 +6,17 @@
 .grid-sizer {
     width: 160px;
     height: 220px;
+
+    @media screen and(max-width: 768px) {
+        width: 100%;
+        // height: 60px;
+    }
+}
+
+.gutter-sizer {
+    width: 20px;
+
+    @media screen and(max-width: 768px) {
+        width: 4%
+    }
 }
