--- a/src/scss/sections/choose--details.scss
+++ b/src/scss/sections/choose--details.scss
@@ -7,6 +7,11 @@
     .found-count {
         margin-left: 8px;
     }
+
+    @media screen and(max-width: 768px) {
+        margin-top: 20px;
+        font-size: 12px;
+    }
 }
 
 .choose__details {
@@ -17,6 +22,14 @@
     height: 526px !important;
     overflow: hidden;
     overflow-y: visible;
+
+    @media screen and(max-width: 768px) {
+        width: 100%;
+        min-height: 276px;
+        max-height: 276px;
+        overflow: hidden;
+        overflow-y: visible;
+    }
 
     .card {
         display: flex;
@@ -62,6 +75,33 @@
                 opacity: 1;
             }
         }
+
+        @media screen and(max-width: 768px) {
+            margin-bottom: 12px;
+            flex-direction: row;
+            align-items: center;
+            width: 100%;
+            max-width: unset;
+            border: 1px solid $colorBrownLighten;
+
+            .card__img {
+                width: 65px;
+                height: 58px;
+
+                img {
+                    object-fit: contain;
+                    object-position: left;
+                    width: 100%;
+                    height: 58px;
+                }
+            }
+            
+            .card__title {
+                margin-top: 0;
+                margin-left: 12px;
+            }
+
+        }
     }
 
     .icon-detail {
@@ -90,6 +130,10 @@
                 stroke: $colorBrownDarken;
             }
         }
+
+        @media screen and(max-width: 768px){
+            display: none;
+        }
     }
 
     .chosen {
@@ -103,5 +147,9 @@
         z-index: -1;
         transition: all ease-in-out .3s;
         opacity: 0;
+
+        @media screen and(max-width: 768px){
+            display: none;
+        }
     }
 }
