--- a/src/scss/sections/product-preview.scss
+++ b/src/scss/sections/product-preview.scss
@@ -14,6 +14,10 @@
         width: 100%;
         height: 780px;
 
+        &.active {
+            position: absolute;
+            height: 100vh;
+        }
 
         img {
             position: absolute;
@@ -46,9 +50,10 @@
 
                 &.zoomed {
                     position: fixed;
+                    top: -70px;
                     width: 100vw;
                     height: 100vh;
-                    z-index: 1;
+                    z-index: 3;
                     object-fit: cover;
                     object-position: center;
                     transition: all ease-in-out .5s;
